--- a/WeBid/trunk/themes/default/style.css
+++ b/WeBid/trunk/themes/default/style.css
@@ -1,9 +1,5 @@
 body	{ font-style: normal; font-weight: normal; font-size: medium; font-family: serif; color: #dddddd; margin: 15px; background-color: #66CCFF; background-image: none; }
 .bodycontent	{ padding: 25px; }
-#featAuctions	{ clear: both; width: inherit; }
-#imgSep	{ background: transparent url(img/imgsep.gif) no-repeat; margin: 0px 4px 0px 4px; padding: 0px; display: inline; height: 8px; width: 8px; }
-#imgTitL	{ background: transparent url(img/tit_l.gif) no-repeat; margin: 0px 5px 0px 0px; padding: 0px; display: inline; height: 8px; width: 8px; }
-#imgTitR	{ background: transparent url(img/tit_r.gif) no-repeat; margin: 0px 0px 0px 5px; padding: 0px; display: inline; height: 8px; width: 8px; }
 *	{ font-family: Arial, Helvetica, sans-serif; }
 .barBrowse	{ margin: 5px 0 0 0; padding: 0 5px 0 0; text-align: right; float: left; }
 .barSearch	{ margin: 5px 0 0 0; padding: 0 0 0 5px; text-align: left; float: left; }
@@ -18,14 +14,12 @@ body	{ font-style: normal; font-weight: normal; font-size: medium; font-family: 
 .content	{ width: 100%; }
 .counters	{ color: #1188dd; font-size: 10px; font-weight: normal; text-transform: uppercase; padding: 0px; margin: 0px; }
 .errfont	{ background-color: #FFFF00; font-weight: bold; font-family: Verdana, Arial, Sans; color: #FF0000; text-align: center; }
-.featAuction	{ text-align: center; padding: 5px; float: left; width: 150px; }
 .footer	{ clear: both; width: inherit; padding: 5px 5px 5px 5px; text-align: center; color: #666666; font-family: Verdana, Arial, Helvetica, sans-serif; font-size: x-small; }
 .hg	{ background-color: #FFFF99; }
-.imgSep	{ background: transparent url(img/imgsep.gif) no-repeat; margin: 0px 4px 0px 4px; padding: 0px; display: inline; height: 8px; width: 8px; }
-.imgTitL	{ background: transparent url(img/tit_l.gif) no-repeat; margin: 0px 5px 0px 0px; padding: 0px; display: inline; height: 8px; width: 8px; }
-.imgTitR	{ background: transparent url(img/tit_r.gif) no-repeat; margin: 0px 0px 0px 5px; padding: 0px; display: inline; height: 8px; width: 8px; }
+.imgSep	{ background: transparent url(img/imgsep.gif) no-repeat center; margin: 0px 4px 0px 4px; padding: 0px; display: inline; height: 8px; width: 8px; }
+.imgTitL	{ background: transparent url(img/tit_l.gif) no-repeat center; margin: 0px 5px 0px 0px; padding: 0px; display: inline; height: 8px; width: 8px; }
+.imgTitR	{ background: transparent url(img/tit_r.gif) no-repeat center; margin: 0px 0px 0px 5px; padding: 0px; display: inline; height: 8px; width: 8px; }
 .logo	{ width: auto; padding: 0; background-color: #ffffff; margin: 0; top: 10px; float: none; text-align: left; }
-.maincolumn	{ text-align: center; float: left; margin: 0px; padding: 0px; }
 .navbar	{ border-top: 1px solid #666666; background: #C2E5FF; padding: 5px; margin: 0px; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #666666; text-align: center; }
 .padding	{ padding: 15px; }
 table	{ color: #000000; }
@@ -38,8 +32,8 @@ table	{ color: #000000; }
 .titTable3	{ background-color: #c2e5ff; text-align: right; padding: 5px; font-size: 11px; color: #666666; border-top-width: 1px; border-top-style: solid; border-top-color: #cccccc; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #cccccc; }
 .titTable4	{ background-color: #EEEEEE; text-align: left; padding: 5px; font-size: 10px; font-weight: bolder; color: #666666; border-top-width: 1px; border-top-style: solid; border-top-color: #B3B3B3; text-transform: uppercase; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #B3B3B3; font-family: Verdana, Arial, sans-serif; }
 p	{ margin: 0px 0px 5px 0px; }
-dl.phpa-tabs	{ margin: 0 0 0 5px; padding: 0; width: 100%; font-size: 13px; }
-dl.phpa-tabs dd	{ margin: 1px; padding: 5px; float: left; background: transparent url(img/bot_deg.gif) repeat; border-top: 1px solid #AEACAC; border-right: 1px solid #AEACAC; border-bottom: 0px; border-left: 1px solid #AEACAC; }
+dl.tabs	{ margin: 0 0 0 5px; padding: 0; width: 100%; font-size: 13px; }
+dl.tabs dd	{ margin: 1px; padding: 5px; float: left; background: transparent url(img/bot_deg.gif) repeat; border-top: 1px solid #AEACAC; border-right: 1px solid #AEACAC; border-bottom: 0px; border-left: 1px solid #AEACAC; }
 h3	{ color: #BA1D1D; font-size: 14px; font-weight: bold; text-transform: uppercase; margin: 10px 0 0 0; }
 input	{ color: #444444; font-size: 12px; }
 li	{ padding-bottom: 5px; }
@@ -54,13 +48,13 @@ th a:link	{ color: #666666; }
 .footer a:link , .footer a:visited	{ text-transform: uppercase; color: #666666; }
 .table-bar a:visited	{ color: #666666; }
 a:visited	{ color: #BA1D1D; text-decoration: none; }
-dl.phpa-tabs dd a:visited	{ color: #666666; }
-dl.phpa-tabs dd.active a:visited	{ color: #666666; }
+dl.tabs dd a:visited	{ color: #666666; }
+dl.tabs dd.active a:visited	{ color: #666666; }
 th a:visited	{ color: #333333; }
 .table-bar a:hover	{ color: #BA1D1D; text-decoration: underline; }
 a:hover	{ color: #BA1D1D; text-decoration: underline; }
-dl.phpa-tabs dd a:hover	{ color: #660000; text-decoration: underline; }
-dl.phpa-tabs dd.active a:hover	{ text-decoration: underline; color: #660000; }
+dl.tabs dd a:hover	{ color: #660000; text-decoration: underline; }
+dl.tabs dd.active a:hover	{ text-decoration: underline; color: #660000; }
 .footer a:hover , .footer a:active	{ color: #6DC0FC; }
 .table-bar a:active	{ color: #BA1D1D; }
 a:active	{ color: #BA1D1D; }
